gitops/test/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: frida-carclaims-test
  labels:
    app: frontend
spec:
  host: frida-carclaims-test.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: frontend
  port:
    targetPort: http
  tls:
    termination: edge
