gitops/test/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frida-carclaims-test
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
